--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "tyautyau56 <i19yanagi@gmail.com> (https://tyautyau56.netlify.app)",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tyautyau56/tyautemp/issues"
   },
