--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,36 @@ yarn-error.log
 package-lock.json
 yarn.lock
 
-# Build directory
-# /public
+# General
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 # JetBrains IDE
 .idea
 
 # vscode
 .vscode
+
