add git function

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "homepage": "https://github.com/tyautyau56/tyautemp#readme",
   "dependencies": {
-    "inquirer": "^7.3.3"
+    "clear": "^0.1.0",
+    "inquirer": "^7.3.3",
+    "rimraf": "^3.0.2"
   }
 }
