--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "bin": {
     "tyautemp": "./.bin/template-select.js"
   },
+  "scripts": {
+    "dev": "ts-node-dev --respawn .bin/template-select.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tyautyau56/tyautemp.git"
@@ -24,5 +27,11 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.12",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.2"
   }
 }
