--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "tyautemp"
-version = "0.1.0"
-authors = ["tyautyau56 <tyautyau56@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+name = "hello_world"
+version = "0.0.0"
+workspace = "../../"
+publish = false
 
 [dependencies]
+rocket = { path = "../../core/lib" }
